fixed email label | removed navbar white space | started navigation fullscreen | fixed sign in | username displayed after signin & login

--- a/styles/form.scss
+++ b/styles/form.scss
@@ -1,4 +1,5 @@
 .required {
     color: red;
     text-align: left;
+    font-size: 70%;
 }
